--fix de test, swagger con schema , fix errores de swagger